; ModuleID = '/home/carl/AnghaBench/libgit2/tests/config/extr_write.c_test_config_write__add_value_with_duplicate_header.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/config/extr_write.c_test_config_write__add_value_with_duplicate_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [24 x i8] c"config-duplicate-insert\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"foo.c\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"old\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"new\00", align 1
@.str.4 = private unnamed_addr constant [47 x i8] c"[foo]\0A  a = b\0A[other]\0A  a = b\0A[foo]\0A  c = old\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_config_write__add_value_with_duplicate_header() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i8** %3, align 8
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i8** %4, align 8
  store i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.4, i64 0, i64 0), i8** %8, align 8
  %9 = load i8*, i8** %1, align 8
  %10 = load i8*, i8** %8, align 8
  %11 = call i32 @cl_git_mkfile(i8* %9, i8* %10)
  %12 = load i8*, i8** %1, align 8
  %13 = call i32 @git_config_open_ondisk(i32** %6, i8* %12)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i32*, i32** %6, align 8
  %16 = call i32 @git_config_snapshot(i32** %7, i32* %15)
  %17 = call i32 @cl_git_pass(i32 %16)
  %18 = load i32*, i32** %7, align 8
  %19 = load i8*, i8** %2, align 8
  %20 = call i32 @git_config_get_string(i8** %5, i32* %18, i8* %19)
  %21 = call i32 @cl_git_pass(i32 %20)
  %22 = load i8*, i8** %3, align 8
  %23 = load i8*, i8** %5, align 8
  %24 = call i32 @cl_assert_equal_s(i8* %22, i8* %23)
  %25 = load i32*, i32** %7, align 8
  %26 = call i32 @git_config_free(i32* %25)
  %27 = load i32*, i32** %6, align 8
  %28 = load i8*, i8** %2, align 8
  %29 = load i8*, i8** %4, align 8
  %30 = call i32 @git_config_set_string(i32* %27, i8* %28, i8* %29)
  %31 = call i32 @cl_git_pass(i32 %30)
  %32 = load i32*, i32** %6, align 8
  %33 = call i32 @git_config_free(i32* %32)
  %34 = load i8*, i8** %1, align 8
  %35 = call i32 @git_config_open_ondisk(i32** %6, i8* %34)
  %36 = call i32 @cl_git_pass(i32 %35)
  %37 = load i32*, i32** %6, align 8
  %38 = call i32 @git_config_snapshot(i32** %7, i32* %37)
  %39 = call i32 @cl_git_pass(i32 %38)
  %40 = load i32*, i32** %7, align 8
  %41 = load i8*, i8** %2, align 8
  %42 = call i32 @git_config_get_string(i8** %5, i32* %40, i8* %41)
  %43 = call i32 @cl_git_pass(i32 %42)
  %44 = load i8*, i8** %4, align 8
  %45 = load i8*, i8** %5, align 8
  %46 = call i32 @cl_assert_equal_s(i8* %44, i8* %45)
  %47 = load i32*, i32** %7, align 8
  %48 = call i32 @git_config_free(i32* %47)
  %49 = load i32*, i32** %6, align 8
  %50 = call i32 @git_config_free(i32* %49)
  ret void
}

declare dso_local i32 @cl_git_mkfile(i8*, i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_config_open_ondisk(i32**, i8*) #1

declare dso_local i32 @git_config_snapshot(i32**, i32*) #1

declare dso_local i32 @git_config_get_string(i8**, i32*, i8*) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i8*) #1

declare dso_local i32 @git_config_free(i32*) #1

declare dso_local i32 @git_config_set_string(i32*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
